svg logos site wide, splash screen has inverted theme with animation, css fixes, aligned homeComponent nav and line to vertical center

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -7,7 +7,7 @@
     }
 }
 .seperatingRow {
-    background-color: black;
+    background-color: #0e0e0e;
     height: 5px;
 }
 .PageTitle{
